# pocketsoc-termux

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: release.yml  tests.yml
docs/: demo.md
docs/screenshots/: README.md
examples/: README.md  sample-report.md
src/pocketsoc/: __init__.py  alert_fatigue.py  alerts.py  alerts_burst.py  anomaly.py  api_server.py  api_token.py  archive.py  audit_export.py  autofix.py  backup_verify.py  baseline.py  bundle.py  bundle_sign.py  checks_parallel.py  cli.py  comment_templates.py  compliance_packs.py  config.py  configio.py  crypto_zip.py  data_quality.py  deps.py  doctor.py  evidence_chain.py  explain.py  exporters.py  forensics.py  forensics_verify.py  incident_pack.py  integrity.py  integrity_monitor.py  models.py  notify.py  plugins.py  policy.py  policy_simulator.py  quality_gate.py  rate_limit.py  readonly.py  (+22 more)
src/pocketsoc/checks/: __init__.py  collectors.py  offline_pkg_db.py
src/pocketsoc/output/: __init__.py  files.py  render.py
tests/: test_alerts.py  test_baseline.py  test_bundle_sign.py  test_cli.py  test_deps.py  test_doctor.py  test_exporters.py  test_integrity_monitor.py  test_output_files.py  test_policy.py  test_rules.py  test_scoring.py
