[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketsoc"
version = "0.1.0"
description = "PocketSOC for Termux: lightweight defensive local monitoring"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PocketSOC Contributors" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.scripts]
pocketsoc = "pocketsoc.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
